cmake_minimum_required(VERSION 3.1)
project(carmel)
set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OPENFST)
find_package(Boost REQUIRED COMPONENTS random timer)

if (NOT OPENFST_FOUND)
  message("carmel will be compiled without OpenFST support")
  message("if you want support, install OpenFST, or set location of OpenFST with OPENFST_ROOT")
else()
  include_directories(${OPENFST_INCLUDE_DIR})
  add_definitions(-DUSE_OPENFST=1)
endif()

include_directories(. ${Boost_INCLUDE_DIRS})

add_executable(carmel carmel/src/carmel.cc carmel/src/fst.cc carmel/src/train.cc carmel/src/gibbs.cc)
if (NOT OPENFST_FOUND)
  target_link_libraries(carmel ${Boost_LIBRARIES})
else()
  target_link_libraries(carmel ${Boost_LIBRARIES} ${OPENFST_LIB})
endif()
